# redbear

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  pyproject.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: CI.yml
benchmarks/: blackbear_way.py  numpy_way.py  pandas_way.py  polars_way.py  redbear_way.py
src/: lib.rs
