[build-system]
requires = ["maturin~=1.11"]
build-backend = "maturin"

[project]
name = "redbear"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
profile = "release"
editable-profile = "dev"
features = ["pyo3/extension-module"]
